# odissei-sicss26-setup

./: .gitignore  main.py  packages.R  pyproject.toml  readme.md  requirements.in  requirements.txt  requirements_macos.txt
extra_r_packages_for_sane/: download_extra_r_packages_for_sane.R  install_extra_r_packages_in_sane.R
r/: download_extra_r_packages_for_sane.R
